--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                     <hr>
                     <div class="row">
                         <div class="col-4 col-md-6">
-                            <a href="temp.html"><img src="Resources/assets/images/temperature.png" width="108%"  alt="temperature">
+                            <a href="temp.html"><img src="Resources/assets/images/temperature.PNG" width="100%"  alt="temperature">
                             </a> 
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="humidity.html"><img src="Resources/assets/images/humidity.png" width="108%" alt="humidity"></a>
+                            <a href="humidity.html"><img src="Resources/assets/images/humidity.PNG" width="100%" alt="humidity"></a>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="cloudiness.html"><img src="Resources/assets/images/cloudiness.png" width="108%"  alt="cloudiness"></a>
+                            <a href="cloudiness.html"><img src="Resources/assets/images/cloudiness.PNG" width="100%"  alt="cloudiness"></a>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="windspeed.html"><img src="Resources/assets/images/wind_speed.png"width="108%"  alt="wind speed"></a>
+                            <a href="windspeed.html"><img src="Resources/assets/images/wind_speed.PNG"width="100%"  alt="wind speed"></a>
                         </div>
                     </div>
                 </div>
