--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Summary</title>
+  <title>HomePage</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -61,17 +61,17 @@
                     <hr>
                     <div class="row">
                         <div class="col-4 col-md-6">
-                            <a href="temp.html"><img src="Resources/assets/images/temperature.PNG" width="100%"  alt="temperature">
+                            <a href="visualizations/temp.html"><img src="Resources/assets/images/temperature.PNG" width="100%"  alt="temperature">
                             </a> 
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="humidity.html"><img src="Resources/assets/images/humidity.PNG" width="100%" alt="humidity"></a>
+                            <a href="visualizations/humidity.html"><img src="Resources/assets/images/humidity.PNG" width="100%" alt="humidity"></a>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="cloudiness.html"><img src="Resources/assets/images/cloudiness.PNG" width="100%"  alt="cloudiness"></a>
+                            <a href="visualizations/cloudiness.html"><img src="Resources/assets/images/cloudiness.PNG" width="100%"  alt="cloudiness"></a>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="windspeed.html"><img src="Resources/assets/images/wind_speed.PNG"width="100%"  alt="wind speed"></a>
+                            <a href="visualizations/wind_speed.html"><img src="Resources/assets/images/wind_speed.PNG"width="100%"  alt="wind speed"></a>
                         </div>
                     </div>
                 </div>
