--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-4 col-md-6">
-                            <a href="visualizations/temp.html"><img src="Resources/assets/images/temperature.PNG" width="100%"  alt="temperature">
+                            <a href="visualizations/temp.html"><img src="../Resources/assets/images/temperature.PNG" width="100%"  alt="temperature">
                             </a> 
                         </div>
                         <div class="col-3 col-md-6">
